Change Log:

2.08  1) Use PortAudio's C API; the C++ bindings are no longer required
      2) Boost is no longer required when std::(tr1::)bind is available, as is
         the case with g++ >= 4.0

2.07  1) bug fix for mode changes via SysV interface (pskmail / flarq)
      2) bug fix for modem configuration post quick change from status
         bar using mouse wheel.
2.06  1) Source code fixes for 64 bit compilers
      2) New stacktrace code, used by default exception & signal handlers
      3) LDT / ZDT: locale settings are now recognized in macro expansion.
         New ILDT / IZDT macros to expand date in iso-8601 format
      4) The rig control window's frequency list now stores rig mode, modem and
         waterfall carrier. Hence, ~/.fldigi/frequencies.txt uses a new format
      5) Additional mouse wheel function: when pointer is over the digiscope
         display, the mouse wheel (no key modifier) alters the PSK AFC search
         range, FeldHell filter BW, or CW filter BW
      6) The Audio menu is now a submenu of Files
2.05  1) Converted entire make system over to the GNU autoconf / automake
         format.  See the INSTALL file for additional information
      2) Corrected various minor bugs
      3) Added mouse wheel functions when mouse is in waterfall display
         a) click - toggle AFC
         b) shift - alter SQL level
         c) ctrl - alter PSK search range.
      4) modified waterfall cursors to show the search range
2.04  1) added full waterfall video texting using FeldHell Modern-8-14 font.
         1, 2, 3 or 4 characters per video line.
      2) bug fix for center mouse button toggle of AFC.
      3) added option to insert CW identifier at end of transmission
2.03  1) bug fix for new startup Sound Card / Mixer naming on configuration tab.
      2) bug fix for initial startup frequency
      3) bug fix for homedir discovery
2.02  1) additional fixes for extended text widgets
2.01  1) Bug fix release